<resources>
    <string name="app_name">Eyes On The Street</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="cat1">
        <item>Select</item>
        <item>Theft</item>
        <item>Harassment</item>
        <item>Assault</item>
        <item>Burglary</item>
        <item>Homicide</item>
        <item>Auto theft</item>
        <item>Property destruction</item>
        <item>Kidnapping</item>
        <item>Ran over</item>
    </string-array>

    <string-array name="cat2">
        <item>Select</item>
        <item>Vandalism</item>
        <item>Civil Problem</item>
        <item>Illumination</item>
        <item>Public Areas Maintenance</item>
        <item>Graffiti</item>
        <item>Alcohol-related</item>
    </string-array>

    <string-array name="cat3">
        <item>Select</item>
        <item>Drug/Narcotic</item>
        <item>Vehicle parked in odd location</item>
        <item>Package/luggage unattended</item>
        <item>Someone pays unusual attention to facilities</item>

    </string-array>

    <string name="criminal_activity">Criminal Activity</string>
    <string name="perceived_danger">Perceived Danger</string>
    <string name="suspicious_circumstances">Suspicious Circumstances</string>
    <string name="you_selected">You Selected:</string>
    <string name="take_picture_proof">Take picture!</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit_report">Submit</string>
    <string name="report_description">Description:</string>
    <string name="other_reason">Other:</string>
    <string name="from_the_categories_below_select_appropiate_incident">From the categories below, select appropiate incident</string>








</resources>
